<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="3dp" >

        <Button
            android:id="@+id/setGregorianButton"
            android:background="@drawable/green_button_selector"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="1dp"
            android:text="@string/set_gregorian_label" />

        <Button
            android:id="@+id/setMisriButton"
            android:background="@drawable/green_button_selector"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="1dp"
            android:text="@string/set_misri_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dayMinusButton"
            android:layout_width="10dp"
             android:background="@drawable/green_button_selector"
             android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginEnd="1dp"
            android:text="@string/DayMinus" />

        <Button
            android:id="@+id/todayButton"
            android:layout_width="0dp"
             android:background="@drawable/green_button_selector"
             android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:text="@string/Today" />

        <Button
            android:id="@+id/dayPlusButton"
            android:layout_width="0dp"
             android:background="@drawable/green_button_selector"
             android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="3"
            android:text="@string/DayPlus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/sunButton"
            android:textColor="@color/white"
            style="@style/notTodayButton"
            android:text="@string/Su" />

        <Button
            android:id="@+id/monButton"
            style="@style/notTodayButton"
            android:textColor="@color/white"
            android:text="@string/Mo" />

        <Button
            android:id="@+id/tueButton"
            style="@style/notTodayButton"
            android:textColor="@color/white"
            android:text="@string/Tu" />

        <Button
            android:id="@+id/wedButton"
            style="@style/notTodayButton"
            android:textColor="@color/white"
            android:text="@string/We" />

        <Button
            android:id="@+id/thuButton"
            style="@style/notTodayButton"
            android:textColor="@color/white"
            android:text="@string/Th" />

        <Button
            android:id="@+id/friButton"
            style="@style/notTodayButton"
            android:textColor="@color/white"
            android:text="@string/Fr" />

        <Button
            android:id="@+id/satButton"
            style="@style/notTodayButton"
            android:textColor="@color/white"
            android:text="@string/Sa" />
    </LinearLayout>

    <TextView
        android:id="@+id/convertedDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dateGregorian"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/eventText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip"
        android:textColor="@color/monthListNumber"
        android:textSize="14sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/arrowsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/arrow_icon_north"
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_keyboard_double_arrow_up_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow_icon_mecca"
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_keyboard_double_arrow_up_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/northLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/north"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/arrow_icon_north"
            app:layout_constraintStart_toStartOf="@+id/arrow_icon_north"
            app:layout_constraintTop_toBottomOf="@+id/arrow_icon_north" />

        <TextView
            android:id="@+id/meccaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mecca"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/arrow_icon_mecca"
            app:layout_constraintStart_toStartOf="@+id/arrow_icon_mecca"
            app:layout_constraintTop_toBottomOf="@+id/arrow_icon_mecca" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>