<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="fill_parent">

	<ListView android:id="@android:id/list" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	
	<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:scrollbars="vertical"
    android:layout_weight="1">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
	<TableLayout android:id="@+id/tableLayout1"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:stretchColumns = "*" android:shrinkColumns = "*">
		<TableRow>
			<TextView android:padding="5dip" android:layout_height="wrap_content"
				android:text="@string/settings_bearing_due_north" android:layout_width="wrap_content"
				android:textSize="16sp" />
			<TextView android:padding="3dip" android:id="@+id/meccaBearing"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="14sp" />
		</TableRow>
		<TableRow>
			<TextView android:padding="5dip" android:layout_height="wrap_content"
				android:text="@string/settings_provider" android:layout_width="wrap_content"
				android:textSize="16sp" />
			<TextView android:padding="5dip" android:id="@+id/provider"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="14sp" />
		</TableRow>
		</TableLayout>
			<TableLayout
		    android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TableRow>
			<TextView android:padding="5dip" android:layout_height="wrap_content"
				android:text="@string/tips" android:layout_width="wrap_content"
				android:textSize="14sp" />
			<TextView android:padding="5dip" 
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="14sp" />
		</TableRow>
		<TableRow>
			<TextView android:padding="5dip" android:layout_height="wrap_content"
				android:text="@string/tips2" android:layout_width="wrap_content"
				android:textSize="14sp" />
			<TextView android:padding="5dip" android:id="@+id/accuracy"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="14sp" />
		</TableRow>
	</TableLayout>
	</LinearLayout>
	</ScrollView>
</LinearLayout>
