<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:background="@color/black"
	android:layout_height="match_parent">

	<ListView android:id="@android:id/list" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/meccaLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="12dp"
		android:text="@string/settings_bearing_due_north"
		android:padding="4dp"
		android:textSize="16sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@android:id/list"
		tools:text="Mecca bearing from due north:" />

	<TextView
		android:id="@+id/meccaBearingValue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:padding="4dp"
		android:textSize="16sp"
		app:layout_constraintStart_toEndOf="@+id/meccaLabel"
		app:layout_constraintTop_toBottomOf="@android:id/list"
		tools:text="114.0" />


	<TextView
		android:id="@+id/providerLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="4dp"
		android:layout_marginStart="12dp"
		android:text="@string/settings_provider"
		android:textSize="16sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/meccaLabel" />

	<TextView
		android:id="@+id/providerValue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:padding="4dp"
		android:textSize="16sp"
		tools:text="Vodafone"
		app:layout_constraintStart_toEndOf="@+id/providerLabel"
		app:layout_constraintTop_toBottomOf="@+id/meccaLabel" />


	<TextView
		android:id="@+id/instructionLabelTop"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:padding="4dp"
		android:text="@string/tips"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/providerLabel" />

	<TextView
		android:id="@+id/instructionLabelBottom"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:padding="4dp"
		android:text="@string/tips2"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/instructionLabelTop" />

</androidx.constraintlayout.widget.ConstraintLayout>
